# capstone_healthcare_analytics

./: .gitignore  Makefile  README.md  pyproject.toml
capstone_healthcare_analytics/: __init__.py  dataset.py  features.py  plots.py
capstone_healthcare_analytics/modeling/: predict.py  train.py
notebooks/: 02_risk_model.ipynb  03_claim_model.ipynb  EDA_missing_values.ipynb  build_features.py  load_data.py  merge_tables.py
notebooks/SQL Queries/: Operational_Analysis.ipynb  db_utils.py
notebooks/models/: claim_logreg.joblib  claim_scaler.joblib  claim_xgb.joblib  claim_xgb_tuned.joblib  feature_schema_claim.json  feature_schema_risk.json  risk_logreg.joblib  risk_scaler.joblib  risk_xgb.joblib  risk_xgb_tuned.joblib
