[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "capstone_healthcare_analytics"
version = "0.0.1"
description = "Healthcare Sector Analytics"
authors = [
  { name = "Narendra" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["capstone_healthcare_analytics"]
include = ["pyproject.toml", "capstone_healthcare_analytics/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["capstone_healthcare_analytics"]
force-sort-within-sections = true

